--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,49 @@ dependencies = [
     # Motion Planning library
     # * 1.7.0: First version distributed on PyPI (no pre-compiled binaries for Windows OS).
     #          Fix OMPL DLL search directory.
-    "ompl>=1.7.0; platform_system != 'Windows'"
+    "ompl>=1.7.0; platform_system != 'Windows'",
+    # Native batch renderer specifically designed for Genesis
+    "gs-madrona>=0.0.2; platform_system == 'Linux' and (platform_machine == 'x86_64' or platform_machine == 'AMD64')",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "black",
+    "pytest",
+    "pytest-xdist",
+    "pytest-forked",
+    "pytest-random-order",
+    "pytest-print",
+    "pytest-rerunfailures",
+    "huggingface_hub",
+    "wandb",
+]
+docs = [
+    # Note that currently sphinx 7 does not work, so we must use v6.2.1. Once fixed we can use a later version.
+    # See https://github.com/kivy/kivy/issues/8230 which tracks this issue.
+    "sphinx==6.2.1",
+    "sphinx-autobuild",
+    "pydata_sphinx_theme",
+    # For spelling
+    "sphinxcontrib.spelling",
+    # Type hints support
+    "sphinx-autodoc-typehints",
+    # Copy button for code snippets
+    "sphinx_copybutton",
+    # Markdown parser
+    "myst-parser",
+    "sphinx-subfigure",
+    "sphinxcontrib-video",
+    "sphinx-togglebutton",
+    "sphinx_design",
+]
+render = [
+    "pybind11[global]",
+    "open3d",
+]
+
+[project.scripts]
+gs = "genesis._main:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
@@ -106,41 +147,3 @@ markers = [
     "required: marks minimal test set that must pass systematically on any environment before merging.",
 ]
 log_cli_level = "WARNING"
-
-[project.scripts]
-gs = "genesis._main:main"
-
-[project.optional-dependencies]
-dev = [
-    "black",
-    "pytest",
-    "pytest-xdist",
-    "pytest-forked",
-    "pytest-random-order",
-    "pytest-print",
-    "pytest-rerunfailures",
-    "huggingface_hub",
-    "wandb",
-]
-docs = [
-    # Note that currently sphinx 7 does not work, so we must use v6.2.1. See https://github.com/kivy/kivy/issues/8230 which tracks this issue. Once fixed we can use a later version
-    "sphinx==6.2.1",
-    "sphinx-autobuild",
-    "pydata_sphinx_theme",
-    # For spelling
-    "sphinxcontrib.spelling",
-    # Type hints support
-    "sphinx-autodoc-typehints",
-    # Copy button for code snippets
-    "sphinx_copybutton",
-    # Markdown parser
-    "myst-parser",
-    "sphinx-subfigure",
-    "sphinxcontrib-video",
-    "sphinx-togglebutton",
-    "sphinx_design",
-]
-render = [
-    "pybind11[global]",
-    "open3d",
-]
