--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -67,6 +67,7 @@ jobs:
         id: analyze
         if: ${{ steps.pr.outputs.pr_number != '' }}
         env:
+          # Note that secrets are not passed to workflows that are triggered by a pull request from a fork
           # --- W&B ---
           WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
           WANDB_ENTITY: genesis-ai-company
@@ -75,7 +76,6 @@ jobs:
 
           # --- Parameters ---
           MAX_REVISIONS: "5"
-          NO_CHANGE_PATIENCE: "100"
           RUNTIME_REGRESSION_TOLERANCE_PCT: "10"
           COMPILE_REGRESSION_TOLERANCE_PCT: "10"
 
@@ -84,84 +84,59 @@ jobs:
           PR_COMMENT_PATH: pr_comment.md
           CHECK_BODY_PATH: check_output.md
         run: |
-          {
-          python - <<'PY'
+          { python - << 'PY'; HAS_REGRESSIONS=$?; } || true
+
           import os, sys, json, math, re
           import wandb
           from pathlib import Path
 
-          # ---------- helpers ----------
-          SHA_RE = re.compile(r"[0-9a-fA-F]{7,40}")
-          def _norm_rev(text):
-              if not text: return None
-              text = text.split("@", 1)[0]
-              m = SHA_RE.search(text)
-              return m.group(0) if m else text
+          # ----- arguments -----
 
-          def _normalize_kv_id(kv: dict, drop_keys=None) -> str:
-              drop = set(drop_keys or [])
-              pairs = []
-              for k, v in kv.items():
-                  if k in drop or v is None:
-                      continue
-                  k = str(k).strip()
-                  v = str(v).strip()
-                  if not k or not v:
-                      continue
-                  pairs.append((k, v))
-              pairs.sort(key=lambda x: x[0])
-              return "-".join(f"{k}={v}" for k, v in pairs)
-
-          def wandb_normalize_benchmark_id(bid: str) -> str:
-              kv = {}
-              for token in (p.strip() for p in bid.split("-") if p.strip()):
-                  if "=" not in token: continue
-                  k, v = token.split("=", 1)
-                  kv[k.strip()] = v.strip()
-              return _normalize_kv_id(kv)
-
-          def artifacts_parse_speed_txt_lines(lines):
-              METRIC_KEYS = {"compile_time", "runtime_fps", "realtime_factor"}
-              out = {}
-              for line in lines:
-                  kv = dict(map(str.strip, p.split("=", 1)) for p in line.split("|") if "=" in p)
-                  tid = _normalize_kv_id(kv, drop_keys=METRIC_KEYS)
-                  for key in ("runtime_fps", "compile_time"):
-                      try:
-                          out[tid][key] = float(kv[key])
-                      except (ValueError, TypeError, KeyError):
-                          pass
-              return out
-
-          def fmt_num(v):
-              if v is None or (isinstance(v,float) and math.isnan(v)): return "—"
-              try:
-                  if isinstance(v, float) and not v.is_integer():
-                      return f"{v:.2f}"
-                  return f"{int(v):,}"
-              except Exception:
-                  return str(v)
-
-          def fmt_pct(v, highlight=False):
-              if v is None or (isinstance(v,float) and math.isnan(v)): return "—"
-              s = f"{v:+.2f}%"
-              return f"**{s}**" if highlight else s
-
-          # ----- thresholds -----
           tol_rt = float(os.environ["RUNTIME_REGRESSION_TOLERANCE_PCT"])
           tol_ct = float(os.environ["COMPILE_REGRESSION_TOLERANCE_PCT"])
           max_revisions = int(os.environ["MAX_REVISIONS"])
-          no_change_patience = int(os.environ["NO_CHANGE_PATIENCE"])
+
+          artifacts_dir = Path(os.environ["ARTIFACTS_DIR"]).expanduser().resolve()
 
           pr_comment_path = Path(os.environ["PR_COMMENT_PATH"]).expanduser()
           check_body_path = Path(os.environ["CHECK_BODY_PATH"]).expanduser()
 
+          # ---------- helpers ----------
+
+          METRIC_KEYS = ("compile_time", "runtime_fps", "realtime_factor")
+
+          def _normalize_kv_id(kv: dict) -> str:
+              return "-".join(f"{k}={v}" for k, v in sorted(kv.items()))
+
+          def normalize_benchmark_id(bid: str) -> str:
+              kv = dict(map(str.strip, token.split("=", 1)) for token in bid.split("-"))
+              return _normalize_kv_id(kv)
+
+          def artifacts_parse_csv_summary(current_txt_path):
+              out = {}
+              for line in current_txt_path.read_text().splitlines():
+                  kv = dict(map(str.strip, p.split("=", 1)) for p in line.split("|") if "=" in p)
+                  record = {}
+                  for k in METRIC_KEYS:
+                      try:
+                          record[k] = float(kv.pop(k))
+                      except (ValueError, TypeError, KeyError):
+                          pass
+                  bid = _normalize_kv_id(kv)
+                  out[bid] = record
+              return out
+
+          def fmt_num(v):
+              return f"{int(v):,}" if v.is_integer() else f"{v:.2f}"
+
+          def fmt_pct(v, *, highlight=False):
+              s = f"{v:+.2f}%"
+              return f"**{s}**" if highlight else s
+
+          def status_picto(is_reg):
+              return "🔴" if is_reg else "✅"
+
           # ----- load artifact (current results) -----
-          artifacts_dir = Path(os.environ["ARTIFACTS_DIR"]).expanduser().resolve()
-          if not artifacts_dir.exists():
-              pr_comment_path.touch()
-              check_body_path.touch()
-              sys.exit(0)
 
           current_txt_path = next(artifacts_dir.rglob("speed_test*.txt"), None)
           if current_txt_path is None:
@@ -169,9 +144,12 @@ jobs:
               check_body_path.touch()
               sys.exit(0)
 
-          current_bm = artifacts_parse_speed_txt_lines(current_txt_path.read_text(encoding="utf-8").splitlines())
+          current_bm = artifacts_parse_csv_summary(current_txt_path)
+          bids_list = sorted(current_bm.keys())
+          assert bids_list
 
           # ----- W&B baselines -----
+
           if not "WANDB_API_KEY" in os.environ:
               print("WANDB_API_KEY is not set")
               sys.exit(0)
@@ -181,115 +159,96 @@ jobs:
           api = wandb.Api()
           runs_iter = api.runs(f"{ENTITY}/{PROJECT}", order="-created_at")
 
-          by_rev = {}
-          rev_order = []
-          selected_revs = None
-          no_change = 0
-
+          records_by_rev = {}
           for run in runs_iter:
+              # Skip runs did not finish for some reason
               if run.state != "finished":
                   continue
 
-              cfg = getattr(run, "config", None)
-              if cfg is None:
+              # Early return if enough complete records have been collected
+              records_is_complete = [sorted(record.keys()) == bids_list for record in records_by_rev.values()]
+              if sum(records_is_complete) == max_revisions:
+                  break
+
+              # Load config and summary, with support of legacy runs
+              config, summary = run.config, run.summary
+              if isinstance(config, str):
+                  config = {k: v["value"] for k, v in json.loads(run.config).items() if not k.startswith("_")}
+              if isinstance(summary._json_dict, str):
+                  summary = json.loads(summary._json_dict)
+
+              # Extract revision commit and branch
+              rev, branch = config["revision"].split("@", 1)
+              assert branch.startswith('Genesis-Embodied-AI/Gen')
+
+              # Do not store new records if the desired number of revision is already reached
+              if len(records_by_rev) == max_revisions and rev not in records_by_rev:
+                  break
+
+              # Extract benchmark ID and normalize it to make sure it does not depends on key ordering.
+              # Note that the rigid body benchmark suite is the only one being supported for now.
+              sid, bid = config["benchmark_id"].split("-", 1)
+              nbid = normalize_benchmark_id(bid)
+              if sid != "rigid_body":
+                  pass
+
+              # Make sure that stats are valid
+              try:
+                for k in METRIC_KEYS:
+                  v = summary[k]
+                  if not isinstance(v, (float, int)) or math.isnan(v):
+                      continue
+              except KeyError:
                   continue
 
-              cfg = json.loads(cfg)
-              raw_rev = cfg.get("revision")
-              raw_bid = cfg.get("benchmark_id")
-              if not raw_rev or not raw_bid:
-                  if selected_revs is not None:
-                      no_change += 1
-                      if no_change >= no_change_patience:
-                          break
-                  continue
+              # Store all the records into a dict
+              records_by_rev.setdefault(rev, {})[nbid] = {
+                  "runtime_fps": summary["runtime_fps"],
+                  "compile_time": summary["compile_time"],
+              }
+          else:
+              raise RuntimeError("Not enough complete W&B records found.")
 
-              rev = _norm_rev(raw_rev.get("value"))
-              bid = raw_bid.get("value")
-              if not rev or not bid:
-                  if selected_revs is not None:
-                      no_change += 1
-                      if no_change >= no_change_patience:
-                          break
-                  continue
-
-              if (selected_revs is not None) and (rev not in selected_revs):
-                  no_change += 1
-                  if no_change >= no_change_patience:
-                      break
-                  continue
-
-              if (rev not in by_rev):
-                  by_rev[rev]={}
-                  rev_order.append(rev)
-                  if len(rev_order) >= max_revisions:
-                      selected_revs = set(rev_order)
-
-              nbid = wandb_normalize_benchmark_id(bid)
-              if (nbid not in by_rev[rev]):
-                  runtime_fps=None
-                  compile_time=None
-                  cnt=0
-
-                  for row in run.scan_history(keys=["runtime_fps","compile_time"]):
-                      runtime_fps = row.get("runtime_fps")
-                      compile_time = row.get("compile_time")
-                      if (runtime_fps is not None) and (compile_time is not None):
-                          break
-                      cnt += 1
-                      if cnt >= 10:
-                          break
-
-                  by_rev[rev][nbid] = {
-                      "runtime_fps": runtime_fps,
-                      "compile_time": compile_time
-                  }
-                  if (selected_revs is not None):
-                      no_change = 0
-              else:
-                  if (selected_revs is not None):
-                      no_change += 1
-                      if no_change >= no_change_patience:
-                          break
+          records_by_rev = dict(kv for kv, flag in zip(records_by_rev.items(), records_is_complete) if flag)
 
           def mean_of(metric, bid):
-              vals=[]
-              for r in by_rev.keys():
-                  v = by_rev.get(r, {}).get(bid, {}).get(metric)
-                  if isinstance(v,(int,float)) and not (isinstance(v,float) and math.isnan(v)):
-                      vals.append(float(v))
-              return sum(vals) / max(len(vals), 1)
+              tot = 0.0
+              for record in records_by_rev.values():
+                  val = record[bid].get(metric)
+                  if val is not None and not math.isnan(val):
+                      tot += val
+              return tot / max_revisions
 
           # ----- build TWO tables -----
-          rows_rt = []
-          rows_ct = []
+
           reg_found = False
+          rows_rt, rows_ct = [], []
           for bid in sorted(current_bm.keys()):
-              cur_rt = current_bm[bid].get("runtime_fps")
-              cur_ct = current_bm[bid].get("compile_time")
+              cur_rt = current_bm[bid]["runtime_fps"]
+              cur_ct = current_bm[bid]["compile_time"]
               base_rt = mean_of("runtime_fps", bid)
               base_ct = mean_of("compile_time", bid)
 
-              d_rt = ((cur_rt - base_rt)/base_rt*100.0) if (base_rt and isinstance(cur_rt, (int, float))) else None
-              d_ct = ((cur_ct - base_ct)/base_ct*100.0) if (base_ct and isinstance(cur_ct, (int, float))) else None
-
-              is_rt_reg = (d_rt is not None and d_rt < -tol_rt)
-              is_ct_reg = (d_ct is not None and d_ct > tol_ct)
-              reg_found = reg_found or is_rt_reg or is_ct_reg
-
-              stat_rt = "🔴" if is_rt_reg else ("ℹ️" if base_rt is None else "✅")
-              stat_ct = "🔴" if is_ct_reg else ("ℹ️" if base_ct is None else "✅")
+              d_rt = (cur_rt - base_rt) / base_rt * 100.0
+              d_ct = (cur_ct - base_ct) / base_ct * 100.0
+              is_rt_reg, is_ct_reg = d_rt < -tol_rt, d_ct > tol_ct
 
               rows_rt.append([
-                  stat_rt, f"`{bid}`",
-                  fmt_num(cur_rt), fmt_num(base_rt),
+                  status_picto(is_rt_reg),
+                  f"`{bid}`",
+                  fmt_num(cur_rt),
+                  fmt_num(base_rt),
                   fmt_pct(d_rt, highlight=is_rt_reg)
               ])
               rows_ct.append([
-                  stat_ct, f"`{bid}`",
-                  fmt_num(cur_ct), fmt_num(base_ct),
+                  status_picto(is_ct_reg),
+                  f"`{bid}`",
+                  fmt_num(cur_ct),
+                  fmt_num(base_ct),
                   fmt_pct(d_ct, highlight=is_ct_reg)
               ])
+
+              reg_found |= is_rt_reg or is_ct_reg
 
           header_rt = [
             "| status | benchmark_id | current FPS | baseline FPS | Δ FPS |",
@@ -303,63 +262,61 @@ jobs:
           table_ct = header_ct + ["| " + " | ".join(r) + " |" for r in rows_ct]
 
           # ----- baseline commit list -----
-          blist = [f"- Commit {i}: {sha}" for i, sha in enumerate(rev_order, 1)]
-          baseline_block = ["**Baselines considered:** " + f"**{len(rev_order)}** commits"] + blist
+          blist = [f"- Commit {i}: {sha}" for i, sha in enumerate(records_by_rev.keys(), 1)]
+          baseline_block = ["**Baselines considered:** " + f"**{max_revisions}** commits"] + blist
 
           # ----- CHECK body (always) -----
-          check_parts = []
-          check_parts += baseline_block
-          check_parts += ["", f"Thresholds: runtime ≤ −{tol_rt:.0f}%, compile ≥ +{tol_ct:.0f}%", ""]
-          check_parts += ["### Runtime FPS", *table_rt, ""]
-          check_parts += ["### Compile Time", *table_ct, ""]
-          check_body = "\n".join(check_parts)
+          check_body = "\n".join(
+              [
+                  *baseline_block,
+                  f"\nThresholds: runtime ≤ −{tol_rt:.0f}%, compile ≥ +{tol_ct:.0f}%",
+                  "\n### Runtime FPS",
+                  *table_rt,
+                  "\n### Compile Time",
+                  *table_ct,
+              ]
+          )
 
           # ----- COMMENT body (only if regressions) -----
           if reg_found:
-              comment_parts = [
-                  ":warning: **Benchmark Regression Detected**",
-                  *baseline_block,
-                  "\n",
-                  f"Thresholds: runtime ≤ −{tol_rt:.0f}%, compile ≥ +{tol_ct:.0f}%",
-                  "\n",
-                  "### Runtime FPS",
-                  *table_rt,
-                  "\n",
-                  "### Compile Time",
-                  *table_ct,
-              ]
-              comment_body = "\n".join(comment_parts)
+              comment_body = "\n".join(
+                  [
+                      ":warning: **Benchmark Regression Detected**",
+                      *baseline_block,
+                      f"\nThresholds: runtime ≤ −{tol_rt:.0f}%, compile ≥ +{tol_ct:.0f}%",
+                      "\n### Runtime FPS",
+                      *table_rt,
+                      "\n### Compile Time",
+                      *table_ct,
+                  ]
+              )
           else:
               comment_body = ""
 
-          # write files
+          # Write files
           check_body_path.write_text(check_body + "\n", encoding="utf-8")
           pr_comment_path.write_text(comment_body + "\n", encoding="utf-8")
 
-          # exit with 1 if regressions are found, 0 otherwise
+          # Exit with 1 if regressions are found, 0 otherwise
           sys.exit(1 if reg_found else 0)
           PY
-          rc=$?
-          echo "HAS_REGRESSIONS=${rc}" >> "$GITHUB_ENV"
-          HAS_REGRESSIONS="${rc}"
-          } || true
 
-          # expose outputs to later steps
-          if [ -f "check_output.md" ]; then
+          # Expose outputs to later steps
+          if [ -f "${CHECK_BODY_PATH}" ]; then
             {
               echo 'CHECK_OUTPUT<<__EOF__'
-              cat check_output.md
+              cat "${CHECK_BODY_PATH}"
               echo '__EOF__'
             } >> "$GITHUB_ENV"
           else
             echo "CHECK_OUTPUT=" >> "$GITHUB_ENV"
           fi
 
-          # only set SCRIPT_OUTPUT when we actually want to comment
-          if [ "${HAS_REGRESSIONS}" = "1" ] && [ -s "pr_comment.md" ]; then
+          # Only set SCRIPT_OUTPUT when we actually want to comment
+          if [ "${HAS_REGRESSIONS}" = "1" ] && [ -s "${PR_COMMENT_PATH}" ]; then
             {
               echo 'SCRIPT_OUTPUT<<__EOF__'
-              cat pr_comment.md
+              cat "${PR_COMMENT_PATH}"
               echo '__EOF__'
             } >> "$GITHUB_ENV"
           else
