--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,14 +17,14 @@ concurrency:
 
 jobs:
   linux-gpu:
-    runs-on: [self-hosted, coreweave]
+    runs-on: [self-hosted, coreweave, genesis-world]
 
     env:
       # Note that secrets are not passed to workflows that are triggered by a pull request from a fork
       WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
       HF_TOKEN: ${{ secrets.HF_TOKEN }}
       HF_HUB_DOWNLOAD_TIMEOUT: 60
-      GENESIS_IMAGE_VER: "1_4"
+      GENESIS_IMAGE_VER: "1_5"
       TIMEOUT_MINUTES: 180
       FORCE_COLOR: 1
       PY_COLORS: 1
@@ -46,7 +46,7 @@ jobs:
           SLURM_JOB_NAME="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
           echo "SLURM_JOB_NAME=${SLURM_JOB_NAME}" >> $GITHUB_ENV
 
-          mkdir -p "${HOME}/.cache" "${HOME}/.local"
+          mkdir -p "${HOME}/.cache" "${HOME}/.venv"
 
           # TODO: USD baking does not currently support Python 3.11 since
           # NVIDIA does not currently release `omniverse-kit==107.3` on PyPI.
@@ -54,51 +54,62 @@ jobs:
           srun \
             --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
             --container-mounts=\
-          "${HOME}/.local":/root/.local,\
+          "${HOME}/.venv":/root/.venv,\
           "${HOME}/.cache":/root/.cache,\
           "${{ github.workspace }}":/root/workspace \
             --no-container-mount-home --container-workdir=/root/workspace \
-            --export=NVIDIA_DRIVER_CAPABILITIES=all,HF_TOKEN,PYTHONUSERBASE=/root/.local,BASH_ENV=/root/.bashrc \
+            --export=NVIDIA_DRIVER_CAPABILITIES=all,HF_TOKEN,BASH_ENV=/root/.bashrc \
             --partition=hpc-mid --exclusive --nodes=1 --time="${TIMEOUT_MINUTES}" \
             --job-name=${SLURM_JOB_NAME} \
-            bash -c "
-              pip install --no-input --user --extra-index-url https://pypi.nvidia.com/ omniverse-kit && \
-              pip install --no-input --user '.[dev,render,usd]' && \
-              pytest -v --backend gpu --dev --forked ./tests
-            "
+            bash -e -s << 'EOF'
+              if test -n "$(find /root/.venv -maxdepth 0 -empty)"; then
+                python3 -m venv --system-site-packages /root/.venv
+                source /root/.venv/bin/activate
+                pip install --no-input --upgrade pip pkg-info wheel
+                pip install --no-input --ignore-installed --upgrade blinker pyparsing setuptools
+              fi
+              source /root/.venv/bin/activate
 
+              pip install --no-input --extra-index-url https://pypi.nvidia.com/ omniverse-kit
+              pip install --no-input ".[dev,render,usd]"
+
+              pytest -v --backend gpu --dev --forked ./tests
+          EOF
       - name: Run benchmarks
         run: |
           SLURM_JOB_NAME="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
           echo "SLURM_JOB_NAME=${SLURM_JOB_NAME}" >> $GITHUB_ENV
 
-          SLURM_ENV_VARS="NVIDIA_DRIVER_CAPABILITIES=all,HF_TOKEN,PYTHONUSERBASE=/root/.local,BASH_ENV=/root/.bashrc"
+          SLURM_ENV_VARS="NVIDIA_DRIVER_CAPABILITIES=all,HF_TOKEN,BASH_ENV=/root/.bashrc"
           if [[ "${{ github.repository }}" == 'Genesis-Embodied-AI/Genesis' && "${{ github.ref }}" == 'refs/heads/main' ]] ; then
             SLURM_ENV_VARS="${SLURM_ENV_VARS},WANDB_API_KEY"
           fi
 
-          # Remove `: #` prefixes to enable tmate interactive debugging session
           srun \
             --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
             --container-mounts=\
-          "${HOME}/.local":/root/.local,\
+          "${HOME}/.venv":/root/.venv,\
           /mnt/data/artifacts:/mnt/data/artifacts,\
           "${{ github.workspace }}":/root/workspace \
             --no-container-mount-home --container-workdir=/root/workspace \
             --export=${SLURM_ENV_VARS} \
             --partition=hpc-mid --exclusive --nodes=1 --time="${TIMEOUT_MINUTES}" \
             --job-name=${SLURM_JOB_NAME} \
-            bash -c "
-              : # sudo apt install -y tmate && \
-              tmate -S /tmp/tmate.sock new-session -d && \
-              tmate -S /tmp/tmate.sock wait tmate-ready && \
-              tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}'
-              pip install --no-input --user '.[dev,render]' && \
-              pytest --print -x -m 'benchmarks' ./tests && \
-              cat speed_test*.txt > '/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt'
-              : # tmate -S /tmp/tmate.sock wait tmate-exit
-            "
+            bash -e -s << 'EOF'
+              # sudo apt update
+              # sudo apt install -y tmate
+              # tmate -S /tmp/tmate.sock new-session -d
+              # tmate -S /tmp/tmate.sock wait tmate-ready
+              # tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}'
 
+              source /root/.venv/bin/activate
+              pip install --no-input ".[dev,render]"
+
+              pytest --print -x -m "benchmarks" ./tests
+              cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
+
+              # tmate -S /tmp/tmate.sock wait tmate-exit
+          EOF
       - name: Kill srun job systematically
         if: always()
         run: |
